stylesheet.css
.space-label-wrapper {
    padding: 0 10px 0 0;
    background-color: transparent;
    border-image: none;
    background-image: none;
    border: none;
}

.space-focus-mode-icon {
    icon-size: 16px;
    padding: 0 18px 0 18px;
    margin-left: 3px;
    background-color: transparent;
}

.focus-button-tooltip {
    background-color: rgba(0, 0, 0, 0.8);
    padding: 8px;
    border-radius: 8px;
    font-weight: 600;
}

.topbar-clear {
    background-color: rgba(0, 0, 0, 0);
}

.topbar-transparent {
    background-color: rgba(0, 0, 0, 0.35)
}

.workspace-icon-button {
    -st-icon-style: symbolic;
    border: none;
    border-radius: 8px;
    padding: 8px;
}

.workspace-icon-button StIcon {
    icon-size: 16px;
}

.paperwm-selection {
    /* matches border radius of default gnome windows */
    border-radius: 12px 12px 0px 0px;
}

.paperwm-minimap-selection {
    border-radius: 8px;
}

.paperwm-window-position-bar-backdrop {
    background-color: rgba(0, 0, 0, 0.35);
}

.paperwm-window-position-bar {
    border: 0; /* disable border to calm it down a bit */
    border-radius: 1px;
}

